# Shooter

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  assets.qrc  main.cpp  shooterwindow.cpp  shooterwindow.h  shooterwindow.ui
src/item/: CMakeLists.txt  avatar.cpp  avatar.h  playeravatar.cpp  playeravatar.h
src/kernel/: CMakeLists.txt  imageitem.cpp  imageitem.h  item.cpp  item.h  scene.cpp  scene.h
src/scene/: CMakeLists.txt  gamescene.cpp  gamescene.h
